--- a/partie_1/Makefile
+++ b/partie_1/Makefile
@@ -11,7 +11,7 @@ indexation_texte.o: indexation_texte.c indexation_texte.h
 	@gcc -c indexation_texte.c
 
 indexation_image.o: indexation_image.c indexation_image.h
-	@gcc -c indexation_image.c
+	@gcc -c indexation_image.c -lm
 
 indexation_audio.o: indexation_audio.c indexation_audio.h
 	@gcc -c indexation_audio.c
@@ -33,7 +33,7 @@ sds.o: sds.c sds.h sdsalloc.h
 	
 tstCreateDescripteurImage.out: tstCreateDescripteurImage.c indexation_image.h sds.h indexation_image.o sds.o
 	@gcc -c tstCreateDescripteurImage.c
-	@gcc -o tstCreateDescripteurImage.out tstCreateDescripteurImage.o sds.o indexation_image.o
+	@gcc -o tstCreateDescripteurImage.out tstCreateDescripteurImage.o sds.o indexation_image.o -lm
 	./tstCreateDescripteurImage.out
 
 .PHONY: clean
