Test et valid tabocc

--- a/partie_1/Makefile
+++ b/partie_1/Makefile
@@ -7,7 +7,7 @@ main.o: main.c indexation.h recherche.h
 indexation.o: indexation.c indexation.h indexation_texte.h indexation_image.h indexation_audio.h
 	@gcc -c indexation.c
 
-indexation_texte.o: indexation_texte.c indexation_texte.h
+indexation_texte.o: indexation_texte.c indexation_texte.h sds.h
 	@gcc -c indexation_texte.c
 
 indexation_image.o: indexation_image.c indexation_image.h
@@ -44,6 +44,12 @@ test_indexation_texte.out : test_indexation_texte.c sds.h sds.o indexation_texte
 	@gcc -c test_indexation_texte.c
 	@gcc -o test_indexation_texte.out test_indexation_texte.o sds.o indexation_texte.o -lm
 	./test_indexation_texte.out
+	
+.PHONY: tst_tabocc.out
+tst_tabocc.out:indexation_texte.h indexation_texte.o sds.h sds.o
+	@gcc -c tst_tabocc.c
+	@gcc -o tst_tabocc.out tst_tabocc.o sds.o indexation_texte.o
+	./tst_tabocc.out
 
 .PHONY: clean
 clean:
