Prototype recherche audio
Prototype recherche audio (indexation jingle et découpage du descripteur en samples)
Test basique
MAJ du Makefile

--- a/partie_1/Makefile
+++ b/partie_1/Makefile
@@ -45,6 +45,12 @@ test_indexation_audio.o: test_indexation_audio.c indexation_audio.h constantes.h
 test_ia.out: test_indexation_audio.o indexation_audio.o sds.o
 	@gcc -o test_ia.out test_indexation_audio.o indexation_audio.o sds.o
 
+test_recherche_audio.o: test_recherche_audio.c recherche_audio.h indexation_audio.h constantes.h sds.h
+	@gcc -c test_recherche_audio.c
+
+test_ra.out: test_recherche_audio.o recherche_audio.o indexation_audio.o sds.o
+	@gcc -o test_ra.out test_recherche_audio.o recherche_audio.o indexation_audio.o sds.o
+
 .PHONY: clean
 clean:
 	@rm -f *.o *.out
