working image searcher for 2 bits

--- a/partie_1/Makefile
+++ b/partie_1/Makefile
@@ -58,11 +58,18 @@ test_image.out: indexation_image.o sds.o TestIndexationImage.c indexation_image.
 	@gcc -o test_image.out TestIndexationImage.o indexation_image.o sds.o -lm
 	./test_image.out
 
+.PHONY:test_recherche_image1.out
 test_recherche_image1.out: test_recherche_image1.c recherche_image.h recherche_image.o indexation_image.o sds.h sds.o sauvegarde_descripteurs.h sauvegarde_descripteurs.o
 	@gcc -c test_recherche_image1.c
 	@gcc -o test_recherche_image1.out test_recherche_image1.o recherche_image.o indexation_image.o sds.o sauvegarde_descripteurs.o -lm
 	./test_recherche_image1.out
 
+.PHONY:test_points_recherche_image.out
+test_points_recherche_image.out: test_points_recherche_image.c recherche_image.h recherche_image.o indexation_image.o sds.h sds.o sauvegarde_descripteurs.h sauvegarde_descripteurs.o
+	@gcc -c test_points_recherche_image.c
+	@gcc -o test_points_recherche_image.out test_recherche_image1.o recherche_image.o indexation_image.o sds.o sauvegarde_descripteurs.o -lm
+	./test_points_recherche_image.out
+	
 .PHONY: clean
 clean:
 	@rm -f *.o *.out
