--- a/partie_1/Makefile
+++ b/partie_1/Makefile
@@ -40,9 +40,9 @@ testSaveDesc.out: testSaveDesc.c sauvegarde_descripteurs.h sds.h sauvegarde_desc
 	./testSaveDesc.out
 
 .PHONY: test_indexation_texte.out
-test_indexation_texte.out : test_indexation_texte.c sds.h sds.o indexation_texte.h indexation_texte.o
+test_indexation_texte.out : test_indexation_texte.c sds.h sds.o indexation_texte.h indexation_texte.o sauvegarde_descripteurs.h sauvegarde_descripteurs.o
 	@gcc -c test_indexation_texte.c
-	@gcc -o test_indexation_texte.out test_indexation_texte.o sds.o indexation_texte.o -lm
+	@gcc -o test_indexation_texte.out test_indexation_texte.o sds.o indexation_texte.o sauvegarde_descripteurs.o -lm
 	./test_indexation_texte.out
 	
 .PHONY: test_indexation_texte_lecture_fichier.out
