--- a/partie_1/Makefile
+++ b/partie_1/Makefile
@@ -1,5 +1,5 @@
 app.out: main.o indexation.o indexation_texte.o indexation_image.o indexation_audio.o recherche.o recherche_image.o recherche_audio.o recherche_texte.o sds.o sauvegarde_descripteurs.o config_reader.o
-	@gcc -o app.out main.o indexation.o indexation_texte.o indexation_image.o indexation_audio.o recherche.o recherche_image.o recherche_audio.o recherche_texte.o sds.o sauvegarde_descripteurs.o config_reader.o -lm
+	@gcc -o app.out $(DEBUG) main.o indexation.o indexation_texte.o indexation_image.o indexation_audio.o recherche.o recherche_image.o recherche_audio.o recherche_texte.o sds.o sauvegarde_descripteurs.o config_reader.o -lm
 	
 main.o: main.c indexation.h sds.h constantes.h config_reader.h sauvegarde_descripteurs.h recherche.h
 	@gcc -c main.c
@@ -8,7 +8,7 @@ indexation.o: indexation.c indexation.h indexation_texte.h indexation_image.h in
 	@gcc -c indexation.c
 	
 recherche.o: recherche.c recherche.h recherche_texte.h recherche_image.h recherche_audio.h sauvegarde_descripteurs.h config_reader.h constantes.h
-	@gcc -c recherche.c
+	@gcc -c $(DEBUG) recherche.c
 
 indexation_texte.o: indexation_texte.c indexation_texte.h sds.h constantes.h sauvegarde_descripteurs.h config_reader.h
 	@gcc -c indexation_texte.c
@@ -20,7 +20,7 @@ indexation_audio.o: indexation_audio.c indexation_audio.h
 	@gcc -c indexation_audio.c
 
 recherche_texte.o: recherche_texte.c recherche_texte.h indexation_texte.h
-	@gcc -c recherche_texte.c
+	@gcc -c $(DEBUG) recherche_texte.c
 
 recherche_image.o: recherche_image.c recherche_image.h indexation_image.h sds.h sauvegarde_descripteurs.h
 	@gcc -c recherche_image.c -lm
