--- a/partie_2/Makefile
+++ b/partie_2/Makefile
@@ -1,5 +1,9 @@
 libMoteurC.so: jni_MoteurC.o
 	gcc -shared -o libMoteurC.so jni_MoteurC.o
 	
-jni_MoteurC.o: jni_MoteurC.c jni_MoteurC.h
-	gcc -c -m64 -I"$JAVA_HOME/include" -I"$JAVA_HOME/include/linux" -o jni_MoteruC.o c/jni_MoteurC.c
+jni_MoteurC.o: c/jni_MoteurC.c c/jni_MoteurC.h
+	gcc -c -m64 -I"$$JAVA_HOME/include" -I"$$JAVA_HOME/include/linux" -o jni_MoteurC.o c/jni_MoteurC.c
+
+.PHONY: clean
+clean:
+	@rm -f *.o *.so *.dll
