--- a/partie_2/Makefile
+++ b/partie_2/Makefile
@@ -1,4 +1,4 @@
-libMoteurC.so: jni_MoteurC.o utility.o
+libMoteurC.so: jni_MoteurC.o utility.o ../partie_1/indexation_audio.o ../partie_1/indexation_image.o ../partie_1/indexation_texte.o ../partie_1/recherche_audio.o ../partie_1/recherche_image.o ../partie_1/recherche_texte.o ../partie_1/sauvegarde_descripteurs.o ../partie_1/config_reader.o ../partie_1/sds.o
 	gcc -shared -o libMoteurC.so jni_MoteurC.o utility.o ../partie_1/indexation_audio.o ../partie_1/indexation_image.o ../partie_1/indexation_texte.o ../partie_1/recherche_audio.o ../partie_1/recherche_image.o ../partie_1/recherche_texte.o ../partie_1/sauvegarde_descripteurs.o ../partie_1/config_reader.o ../partie_1/sds.o
 	
 jni_MoteurC.o: c/jni_MoteurC.c c/jni_MoteurC.h c/utility.h
